fix nav alignment

--- a/css/components/nav.scss
+++ b/css/components/nav.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 80px;
-  padding: 0 20px;
+  padding: 0 12px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -17,6 +17,7 @@
   );
   opacity: 0;
   @include bp(375) {
+    padding: 0 20px;
     height: 120px;
   }
   @include bp(768) {
@@ -27,7 +28,7 @@
     width: 120px;
     z-index: 10;
 
-    @include bp(768) {
+    @include bp(400) {
       width: 140px;
     }
     @include bp(1400) {
@@ -36,14 +37,17 @@
     @include bp(1800) {
       width: 200px;
     }
-    svg,
-    img {
-      max-width: 100%;
-    }
-    svg {
-      fill: #fff;
-      .logo-hex {
-        fill: $elwoodGreen;
+    a {
+      svg,
+      img {
+        display: block;
+        max-width: 100%;
+      }
+      svg {
+        fill: #fff;
+        .logo-hex {
+          fill: $elwoodGreen;
+        }
       }
     }
   }
